# tuimux

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: prd.md  sdd.md  srs.md  v0.2-quality-requirements.md
docs/skills/: btop-terminal-emulator.md  paste-highlight-click-clear.md  terminal-copy-cut-paste-interaction.md
scripts/: install.ps1  install.sh  smoke_macos_altscreen.py  smoke_macos_apps.py  smoke_macos_child_exit.py  smoke_macos_color.py  smoke_macos_mouse_protocol.py  smoke_macos_no_tmux.py  smoke_macos_osc52_clipboard.py  smoke_macos_osc52_paste.py  smoke_macos_paste_cursor_move.py  smoke_macos_resize.py  smoke_macos_scrollback.py  smoke_macos_session_flow.py  smoke_macos_terminal_chrome.py  smoke_macos_ui_selection.py  smoke_macos_window_flow.py  smoke_macos_window_title.py
src/: clipboard.rs  doctor.rs  files.rs  main.rs  mux_backend.rs  native_mux.rs  preview.rs  terminal.rs  tmux.rs  tui.rs  util.rs
