[package]
name = "tuimux"
version = "0.2.0-alpha.21"
edition = "2021"
rust-version = "1.74"
description = "A prefix-free, mouse-first Rust-native terminal multiplexer"
license = "MIT"
repository = "https://github.com/hungryZoo/tuimux"
readme = "README.md"
keywords = ["tui", "terminal", "multiplexer", "ratatui"]
categories = ["command-line-utilities"]

[[bin]]
name = "tuimux"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.27"
libc = "0.2"
portable-pty = "0.9"
ratatui = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vt100 = "0.16"

[profile.release]
strip = true
lto = "thin"
opt-level = "z"
codegen-units = 1
panic = "abort"
